formatting of project page is better

--- a/projects.html
+++ b/projects.html
@@ -23,41 +23,56 @@
 			</div>
 			<div id="projects" class="contentlist">
         <p style="margin-top: 30px">The following is a list of the projects I've worked on over the last several years. Select any project to see photos (and sometimes videos) and more information.</p>
-                <h2>Projects</h2>
+                <h2>UX and HCI Projects</h2>
                 <ul>
                   <li><a href="projects/helpkiosk/index.html">HelpKiosk</a>
-                    <p style="margin-bottom: 3px">In collaboration between Samsung R&D Vancouver and the eDAPT Lab at the University of British Columbia, I led a research project to redesign a kiosk to help seniors learn to use smart phones. With one other research assistant, we updated an old version of the application, conducted some initial user testing, iterated on the design, then conducted a formal usability study, which was presented as a poster at the ASSETS '18 conference.</p>
+                    <p style="margin-bottom: 3px">In collaboration between Samsung R&D Vancouver and the eDAPT Lab at the University of British Columbia, I led a research project to redesign a kiosk to help seniors learn to use smart phones. With one other research assistant, we updated an old version of the application, conducted initial user testing, iterated on the design of the experience, then conducted a formal usability study, which was presented as a poster at the ASSETS '18 conference.</p>
                     #usability-testing #iterative-design #user-research
                   </li>
                   <li><a href="projects/terratree/index.html">TerraTree</a>
                 		<p style="margin-bottom: 3px">Interactive, multi-modal installation on a historic site in the city of Enschede, NL. Developed in cooperation with local city planners and the local historical society, through the University of Twente.</p>
-                    #multi-modal-interaction #interaction-design #rapid-prototyping
+                    #rapid-prototyping #interaction-design #multi-modal-interaction
                 	</li>
                   <li><a href="projects/tippie/index.html">Tippie</a>
-                    <p style="margin-bottom: 3px">Cashless payment solution for street performers, community art events, and other traditionally cash-based donations. Created during the European Institute of Innovation and Technology - Digital Finance summer school in Budapest, HU.</p>
+                    <p style="margin-bottom: 3px">Cashless payment solution for street performers, community art events, and other traditionally cash-based donations, inspired by a week of user research conducted in Budapest. Created during the European Institute of Innovation and Technology - Digital Finance summer school in Budapest.</p>
                     #user-research #business-strategy #rapid-prototyping
                   </li>
                   <li><a href="projects/worker/index.html">WorkeR</a>
-                    <p style="margin-bottom: 3px">A multi-discplinary, VR training environment to allow different stakeholders (Police, Medical, Fire) to train together and cooperate in virtual scenarios without being collocated. Based on user research conducted with the Fire Department in Enschede, NL, and other paramedics around Europe.</p>
+                    <p style="margin-bottom: 3px">A multi-discplinary, VR training environment to allow different stakeholders (Police, Medical, Fire) to train together and cooperate in virtual scenarios without being collocated. Based on four rounds of user studies conducted with the Fire Department in Enschede, NL, and other paramedics around Europe.</p>
                     #storyboarding #user-research #user-centered-design #business-strategy
                   </li>
-                  <li><a href="projects/melt/index.html">Melt Collective</a>
-                    <p style="margin-bottom: 3px">For 6 months I worked as a sort of artist-in-residence at the <a href="http://www.meltcollective.com" target="blank">Melt Collective</a> lab. I helped to ideate and prototype creative uses for recycled plastic, while I worked on my main project, developing a way to melt and mold plastic bags. My final project was an archway built from bricks manufactured using the technique I developed.</p>
-                    #design-thinking #prototyping
+                  <li><a href="projects/design/index.html">Other design projects</a>
+                    <p style="margin-bottom: 3px">Three projects from my undergraduate and masters programs focused on human-computer interaction and user experience design.</p>
+                    #user-research #user-centered-design #interaction-design #visual-design
                   </li>
+                </ul>
+                <h2>Art Projects</h2>
+                <ul>
+                  <li><a href="projects/melt/index.html">Melt Collective</a>
+                    <p style="margin-bottom: 3px">6 months of artist-in-residency at the <a href="http://www.meltcollective.com" target="blank">Melt Collective</a> lab. Helping to ideate and prototype creative uses for recycled plastic in various multi-discplinary teams including artists, scientists, engineers, and more. Meanwhile working on one main project to develop a way to melt and mold plastic bags - prototype archway built from bricks manufactured using this technique.</p>
+                    #design-thinking #prototyping #iterative-design
+                  </li>
+                  <li><a href="projects/artworks/index.html">Other art projects</a>
+                    <p style="margin-bottom: 3px">Various art projects from throughout my undergraduate fine art degree, and beyond: ranging from traditional painting, to experimental wearables, to robotic sculptures.</p>
+                    #visual-design #interaction-design #prototyping #iterative-design #illustration
+                  </li>
+                </ul>
+                <h2>Work Experience</h2>
+                <ul>
                   <li><a href="projects/ahva/index.html">Visual Art Department - UBC</a>
                     <p style="margin-bottom: 3px">Redesigned the website into a new digital information hub for safety, training and other information. Managed web content and designed posters for visiting artists and art exhibitions</p>
                     #user-centered-design #design-thinking #visual-design #illustration
                   </li>
                   <li><a href="projects/ck12/index.html">Ck-12 Foundation</a>
                     <p style="margin-bottom: 3px">As an intern, then designer, then contractor, I mocked up website and app prototypes for the executive team. I helped develop the concept and design of a new “Study Guides” feature, and created hundreds of illustrations for science and math textbooks. I also helped to debug and refine beta content tools targeted at teachers.</p>
-                    #illustration #design-thinking #visual-design #interaction-design #prototyping
+                    #illustration #visual-design #interaction-design #prototyping
+                    <p style="margin-bottom: 25px"></p>
                   </li>
                	</ul>
                 <hr>
                 <h2>Coursework</h2>
-                <p>I'm currently pursuing a dual Master of Science degree at the University of Twente and the University of Paris-Sud, through the European Institure of Innovation and Technology Digital Masters School. My area of study is human-computer interaction design, with a minor in innovation and entrepreneurship. The studies concentrate on user-centered design practices and user-experience design, as well as techniques for rapid prototyping and capturing user insights.</p>
-                <p style="margin-bottom: 25px">My undergraduate studies in computer science consisted of primarily of human-computer interaction and software engineering for web applications, database design, and algorithms.                
+                <p>I'm currently finishing a dual Master of Science degree at the University of Twente and the University of Paris-Sud, through the European Institure of Innovation and Technology Digital Masters School. My area of focus is human-computer interaction design, with a minor in innovation and entrepreneurship. The studies concentrate on user-centered design practices and user-experience design, as well as techniques for rapid prototyping, and capturing and designing from user insights.</p>
+                <p style="margin-bottom: 25px">My undergraduate studies in computer science consisted primarily of human-computer interaction and software engineering (web applications, database design and algorithms).                
                 In visual art, my work focused on the study of humans and technology: the technohuman, the “non-spaces” created by technology, and the way interaction with technology facilitates humanity.</p>
                 <hr>
                 <h2>Other Projects</h2>
