--- a/projects/terratree/index.html
+++ b/projects/terratree/index.html
@@ -16,6 +16,7 @@
 						Spring, 2019</h1>
 						<p>Enschede, NL</p>
 						<h4>In a team of 5, we developed and created a multi-modal, interactive art installation for a historic city site in Enschede, NL.<br/>Through many cycles of ideation and rapid prototyping, and working in cooperation with the city and local historical society, we developed an installation to help visitors to a new park discover stories about the historic city.</h4>
+						<h4 style="opacity: 0.7;"><i>I am currently developing this project into a research paper in collaboration with two professors at the University of Twente.<br/>We are exploring the design and prototyping process we used to design for this specific place,<br/>and how that can be generalized into design and design-teaching guidelines.</i></h4>
 					</header>
 					<section id="main">
 							<section class="thumbnails">
