--- a/projects/artworks/index.html
+++ b/projects/artworks/index.html
@@ -14,7 +14,7 @@
 						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 						<h1><strong>Art Practice</strong><br/>
 						2016 - 2019</h1>
-						<h4>In addition to the residency and <a href="../melt/index.html">work with Melt Collective</a>, I worked on many other art projects during my degree and time in Vancouver.<br/>These varied from more traditional paintings, to working with analog and digital printing processes, to photography, to experiments with Arduinos and wearable technology, to <a href="https://vimeo.com/249602541">robotic arms</a>, and some assorted illustration projects for indie films.</h4>
+						<h4>In addition to the residency and <a href="../melt/index.html">work with Melt Collective</a>, I worked on many other art projects during my degree and time in Vancouver.<br/>These varied from more traditional paintings, to working with analog and digital printing processes, to photography and digital artwork, to experiments with Arduinos and wearable technology, to <a href="https://vimeo.com/249602541">robotic arms</a>, and some assorted illustration projects for indie films.</h4>
 						<h4>Here is a collection of some of my work from the last several years.</h4>
 						<h4 style="opacity: 0.7;">And here's a poetry project I recently created, exploring the beauty of math and the mathematical process: <a href="PoemsForMath.pdf" target="blank">pdf of book</a></h4>
 					</header>
