--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
                     <p style="margin-bottom: 3px">A multi-discplinary, VR training environment to allow different stakeholders (Police, Medical, Fire) to train together and cooperate in virtual scenarios without being collocated. Based on four rounds of user studies conducted with the Fire Department in Enschede, NL, and other paramedics around Europe.</p>
                     #storyboarding #user-research #user-centered-design #business-strategy
                   </li>
-                  <li><a href="projects/design/index.html">Other design projects</a> 2016-19
+                  <li><a href="projects/design/index.html">Other design projects</a> - 2016-19
                     <p style="margin-bottom: 3px">Three projects from my undergraduate and masters programs focused on human-computer interaction and user experience design.</p>
                     #user-research #user-centered-design #interaction-design #visual-design
                   </li>
