--- a/projects.html
+++ b/projects.html
@@ -71,9 +71,9 @@
                	</ul>
                 <hr>
                 <h2>Coursework</h2>
-                <p>I'm currently finishing a dual Master of Science degree at the University of Twente and the University of Paris-Sud, through the European Institure of Innovation and Technology Digital Masters School. My area of focus is human-computer interaction design, with a minor in innovation and entrepreneurship. The studies concentrate on user-centered design practices and user-experience design, as well as techniques for rapid prototyping, and capturing and designing from user insights.</p>
-                <p style="margin-bottom: 25px">My undergraduate studies in computer science consisted primarily of human-computer interaction and software engineering (web applications, database design and algorithms).                
-                In visual art, my work focused on the study of humans and technology: the technohuman, the “non-spaces” created by technology, and the way interaction with technology facilitates humanity.</p>
+                <p>I'm currently finishing a dual Master of Science degree at the University of Twente and the University of Paris-Sud, through the European Institure of Innovation and Technology Digital Masters School. My focus is in human-computer interaction design, with a minor in innovation and entrepreneurship. The courses concentrate on user-centered design practices, user-experience design, user research, techniques for rapid prototyping, and capturing and designing from user insights.</p>
+                <p style="margin-bottom: 25px">My undergraduate studies in computer science focused on human-computer interaction and user-centered design methods, and software engineering (web applications, database design and algorithms).                
+                In visual art, my work focused on the study of humans and technology: the technohuman, the “non-spaces” created by technology, and the way that interactions with technology facilitate humanity.</p>
                 <hr>
                 <h2>Other Projects</h2>
                 <ul>
