--- a/projects.html
+++ b/projects.html
@@ -77,20 +77,20 @@
                 <hr>
                 <h2>Other Projects</h2>
                 <ul>
-                <li>
-                    <p>Built from scratch the backend of a RESTful API to search, and sort all the enrollment data at University of British Columbia. Then, built a Javascript front-end using the latest libraries (React) to display the data and allow users to explore it in a web-UI environment. (<a href="https://github.com/CS310-2016Fall/cpsc310project_team78" target="blank">link to repo</a>)</p>
+                  <li>
+                    <p>Collaboratively designed and ran a study that explored how people use different social media and messaging platforms to organize community events. Concluded the study with a set of design guidelines to support local community organizing, and a medium fidelity prototype implementing them. <a href="projects/design/index.html">more</a></p>
                   </li>
                   <li>
-                    <p>Collaboratively designed and ran a study that explored how people use different social media and messaging platforms to organize community events. Concluded the study with a set of design guidelines to support local community organizing, and a medium fidelity prototype implementing them.</p>
+                    <p>Collaboratively designed and ran a study into home-delivery grocery systems, with a focus on integrating them into workflow in the kitchen (e.g. smart kitchens, meal planning, etc.) <a href="projects/design/index.html">more</a></p>
+                  </li>
+                  <li>
+                    <p>Built from scratch the backend of a RESTful API to search, and sort all the enrollment data at University of British Columbia. Then, built a Javascript front-end using the latest libraries (React) to display the data and allow users to explore it in a web-UI environment. (<a href="https://github.com/CS310-2016Fall/cpsc310project_team78" target="blank">link to repo</a>)</p>
                   </li>
                   <li>
                     <p>Built an Android app using the local (Vancouver) bus database, to plan trips, and live-plot buses.</p>
                   </li>
                   <li>
-                    <p>Collaboratively designed and ran a study into home-delivery grocery systems, with a focus on integrating them into workflow in the kitchen (e.g. smart kitchens, meal planning, etc.).</p>
-                  </li>
-                  <li>
-                    <p>Multiple artworks and installations involving robotics, Arduinos and web applications, as well as some works in more traditional mediums.</p>
+                    <p>Multiple artworks and installations involving robotics, Arduinos and web applications, as well as some works in more traditional mediums. <a href="projects/artworks/index.html">more</a></p>
                   </li>
                   <li>
                     <p>Built several simple games as proofs of concept for functional programming and AI courses. (<a href="https://github.com/zlwilson" target="blank">link to repo</a>)</p>
