resume links to projects

--- a/resume.html
+++ b/resume.html
@@ -29,23 +29,23 @@
                             <ul>
                                 <li><a href="http://www.cs.ubc.ca/labs/imager/laboverview.php" target="blank">Samsung + eDAPT Lab (UBC)</a> | Vancouver, BC - 2017-18
                                     <p>Undergraduate Researcher</p>
-                                    <p>Working with one other undergraduate researcher, I built a prototype kiosk to help seniors learn to use smart phones, which expanded on a proptype developed by a reasearcher at the Samsung UX research lab in Vancouver, BC. We began with lightweight user testing to gather initial feedback while we iterated on the design of the kiosk, and finally we designed and ran a controlled experiment in collaboration with a post-doc in Japan which was presented as a poster at CSCW '18.</p>
+                                    <p>Working with one other undergraduate researcher, I built a prototype kiosk to help seniors learn to use smart phones, which expanded on a proptype developed by a reasearcher at the Samsung UX research lab in Vancouver, BC. We began with lightweight user testing to gather initial feedback while we iterated on the design of the kiosk, and finally we designed and ran a controlled experiment in collaboration with a post-doc in Japan which was presented as a poster at CSCW '18. <a href="projects/helpkiosk/index.html">more ></a></p>
                                 </li>
                                 <li><a href="http://www.meltcollective.com" target="blank">Melt Collective</a> | Vancouver, BC - 2018
                                     <p>Resident Artist</p>
-                                    <p>For 6 months I worked on art projects in the Melt Collective lab at UBC. I helped ideate then prototyped creative uses for recycled plastics. I developed a technique to mold plastic from waste plastic bags, then I built a prototype archway by manufacturing bricks using this technique and plastic bags gathered from the city.</p>
+                                    <p>For 6 months I worked on art projects in the Melt Collective lab at UBC. I helped ideate then prototyped creative uses for recycled plastics. I developed a technique to mold plastic from waste plastic bags, then I built a prototype archway by manufacturing bricks using this technique and plastic bags gathered from the city. <a href="projects/melt/index.html">more ></a></p>
                                 </li>
                                 <li><a href="https://ahva.ubc.ca" target="blank">Visual Art Department (UBC)</a> | Vancouver, BC - 2016-18
                                     <p>Graphics/Media Production Assistant</p>
-                                    <p>Based on data I gathered from the varied labs of the art department, I reoprganized the website of the department into a new online training and information hub for students to access all relevant safety, training and other information. I also streamlined some backend processes for the administration by simplifing information input, and reorganized data to enable more automation. As the departments designer I also created promotional material for visiting artist events and exhibition openings, kept their website up to date.</p>
+                                    <p>Based on data I gathered from the varied labs of the art department, I reoprganized the website of the department into a new online training and information hub for students to access all relevant safety, training and other information. I also streamlined some backend processes for the administration by simplifing information input, and reorganized data to enable more automation. As the departments designer I also created promotional material for visiting artist events and exhibition openings, kept their website up to date. <a href="projects/ahva/index.html">more ></a></p>
                                 </li>
                                 <li><a href="https://www.ck12.org" target="blank">Ck-12</a> | Palo Alto, CA - 2011-16
                                     <p>Designer (Contract)</p>
-                                    <p>I developed a prototype content delivery app for iOS, created graphics for many of their science textbooks, created the template for their study guides, and designed templates and examples for new web applications in development.</p>
+                                    <p>I developed a prototype content delivery app for iOS, created graphics for many of their science textbooks, created the template for their study guides, and designed templates and examples for new web applications in development. <a href="projects/ck12/index.html">more ></a></p>
                                 </li>
                                 <li><u class="fakelink">4Band</u> | Mountain View, CA - 2013-14
                                     <p>UI/UX Designer and Lead Illustrator</p>
-                                    <p>As illustrator for this small music collaboration startup, I was tasked with the company logo and branding, as well as creating the UI elements of the software. With one other designer, I designed the entire user experience: a limited social platform plus recording software for musicians to collaborate within.</p>
+                                    <p>As illustrator for this small music collaboration startup, I was tasked with the company logo and branding, as well as creating the UI elements of the software. With one other designer, I designed the entire user experience: a limited social platform plus recording software for musicians to collaborate within. <a href="projects/design/index.html">more ></a></p>
                                 </li>
                             </ul>
                         </td>
