--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
                 </ul>
                 <h2>Art Projects</h2>
                 <ul>
-                  <li><a href="projects/melt/index.html">Melt Collective</a> - 2018
+                  <li><a href="projects/melt/index.html">Melt Collective</a> - 2017-18
                     <p style="margin-bottom: 3px">6 months of artist-in-residency at the <a href="http://www.meltcollective.com" target="blank">Melt Collective</a> lab. Helping to ideate and prototype creative uses for recycled plastic in various multi-discplinary teams including artists, scientists, engineers, and more. Meanwhile working on one main project to develop a way to melt and mold plastic bags - prototype archway built from bricks manufactured using this technique.</p>
                     #design-thinking #prototyping #iterative-design
                   </li>
