--- a/resume.html
+++ b/resume.html
@@ -31,7 +31,7 @@
                                     <p>Undergraduate Researcher</p>
                                     <p>Working with one other undergraduate researcher, I built a prototype kiosk to help seniors learn to use smart phones, which expanded on a proptype developed by a reasearcher at the Samsung UX research lab in Vancouver, BC. We began with lightweight user testing to gather initial feedback while we iterated on the design of the kiosk, and finally we designed and ran a controlled experiment in collaboration with a post-doc in Japan which was presented as a poster at CSCW '18. <a href="projects/helpkiosk/index.html">more ></a></p>
                                 </li>
-                                <li><a href="http://www.meltcollective.com" target="blank">Melt Collective</a> | Vancouver, BC - 2018
+                                <li><a href="http://www.meltcollective.com" target="blank">Melt Collective</a> | Vancouver, BC - 2017-18
                                     <p>Resident Artist</p>
                                     <p>For 6 months I worked on art projects in the Melt Collective lab at UBC. I helped ideate then prototyped creative uses for recycled plastics. I developed a technique to mold plastic from waste plastic bags, then I built a prototype archway by manufacturing bricks using this technique and plastic bags gathered from the city. <a href="projects/melt/index.html">more ></a></p>
                                 </li>
