--- a/projects/design/index.html
+++ b/projects/design/index.html
@@ -30,20 +30,32 @@
 										<img src="images/thumbs/02.jpg" alt="" />
 										<h3>The simple homepage for a community event planning application</h3>
 									</a>
-								</div>
-								<div>
 									<a href="images/fulls/03.jpg">
 										<img src="images/thumbs/03.jpg" alt="" />
 										<h3>Prototype for a Couchsurfing redesign</h3>
 									</a>
+								</div>
+								<div>
 									<a href="images/fulls/04.jpg">
 										<img src="images/thumbs/04.jpg" alt="" />
 										<h3>Design alternatives for user testing</h3>
 									</a>
-								</div>
-								<div>
 									<a href="images/fulls/05.jpg">
 										<img src="images/thumbs/05.jpg" alt="" />
+										<h3>An experimental login screen design</h3>
+									</a>
+									<a href="images/fulls/06.jpg">
+										<img src="images/thumbs/06.jpg" alt="" />
+										<h3>An experimental login screen design</h3>
+									</a>
+								</div>
+								<div>
+									<a href="images/fulls/07.jpg">
+										<img src="images/thumbs/07.jpg" alt="" />
+										<h3>An experimental login screen design</h3>
+									</a>
+									<a href="images/fulls/08.jpg">
+										<img src="images/thumbs/08.jpg" alt="" />
 										<h3>An experimental login screen design</h3>
 									</a>
 								</div>
