--- a/projects.html
+++ b/projects.html
@@ -25,47 +25,47 @@
         <p style="margin-top: 30px">The following is a list of the projects I've worked on over the last several years. Select any project to see photos (and sometimes videos) and more information.</p>
                 <h2>UX and HCI Projects</h2>
                 <ul>
-                  <li><a href="projects/helpkiosk/index.html">HelpKiosk</a> - 2017-18
-                    <p style="margin-bottom: 3px">In collaboration between Samsung R&D Vancouver and the eDAPT Lab at the University of British Columbia, I led a research project to redesign a kiosk to help seniors learn to use smart phones. With one other research assistant, we updated an old version of the application, conducted initial user testing, iterated on the design of the experience, then conducted a formal usability study, which was presented as a poster at the ASSETS '18 conference.</p>
-                    #usability-testing #iterative-design #user-research
+                  <li><a href="projects/helpkiosk/index.html">HelpKiosk</a> - 2017-18<br/>
+                  	#usability-testing #iterative-design #user-research #analysis
+                    <p style="margin-top: 3px">In collaboration between Samsung R&D Vancouver and the eDAPT Lab at the University of British Columbia, I led a research project to redesign a kiosk to help seniors learn to use smart phones. With one other research assistant, we updated an old version of the application, conducted initial user testing, iterated on the design of the experience, then conducted a formal usability study, using thematic analysis to process the interviews, which was presented as a poster at the ASSETS '18 conference.</p>
                   </li>
-                  <li><a href="projects/terratree/index.html">TerraTree</a> - 2019
-                		<p style="margin-bottom: 3px">Interactive, multi-modal installation on a historic site in the city of Enschede, NL. Developed in cooperation with local city planners and the local historical society, through the University of Twente.</p>
+                  <li><a href="projects/terratree/index.html">TerraTree</a> - 2019<br/>
                     #rapid-prototyping #interaction-design #multi-modal-interaction
+                	<p style="margin-top: 3px">Interactive, multi-modal installation on a historic site in the city of Enschede, NL. Developed in cooperation with local city planners and the local historical society, through the University of Twente.</p>
                 	</li>
-                  <li><a href="projects/tippie/index.html">Tippie</a> - 2019
-                    <p style="margin-bottom: 3px">Cashless payment solution for street performers, community art events, and other traditionally cash-based donations, inspired by a week of user research conducted in Budapest. Created during the European Institute of Innovation and Technology - Digital Finance summer school in Budapest.</p>
+                  <li><a href="projects/tippie/index.html">Tippie</a> - 2019<br/>
                     #user-research #business-strategy #rapid-prototyping
+                    <p style="margin-top: 3px">Cashless payment solution for street performers, community art events, and other traditionally cash-based donations, inspired by a week of user research conducted in Budapest. Created during the European Institute of Innovation and Technology - Digital Finance summer school in Budapest.</p>
                   </li>
-                  <li><a href="projects/worker/index.html">WorkeR</a> - 2018-19
-                    <p style="margin-bottom: 3px">A multi-discplinary, VR training environment to allow different stakeholders (Police, Medical, Fire) to train together and cooperate in virtual scenarios without being collocated. Based on four rounds of user studies conducted with the Fire Department in Enschede, NL, and other paramedics around Europe.</p>
+                  <li><a href="projects/worker/index.html">WorkeR</a> - 2018-19<br/>
                     #storyboarding #user-research #user-centered-design #business-strategy
+                    <p style="margin-top: 3px">A multi-discplinary, VR training environment to allow different stakeholders (Police, Medical, Fire) to train together and cooperate in virtual scenarios without being collocated. Based on four rounds of user studies conducted with the Fire Department in Enschede, NL, and other paramedics around Europe.</p>
                   </li>
-                  <li><a href="projects/design/index.html">Other design projects</a> - 2016-19
-                    <p style="margin-bottom: 3px">Three projects from my undergraduate and masters programs focused on human-computer interaction and user experience design.</p>
+                  <li><a href="projects/design/index.html">Other design projects</a> - 2016-19<br/>
                     #user-research #user-centered-design #interaction-design #visual-design
+                    <p style="margin-top: 3px">Three projects from my undergraduate and masters programs focused on human-computer interaction and user experience design.</p>
                   </li>
                 </ul>
                 <h2>Art Projects</h2>
                 <ul>
-                  <li><a href="projects/melt/index.html">Melt Collective</a> - 2017-18
-                    <p style="margin-bottom: 3px">6 months of artist-in-residency at the <a href="http://www.meltcollective.com" target="blank">Melt Collective</a> lab. Helping to ideate and prototype creative uses for recycled plastic in various multi-discplinary teams including artists, scientists, engineers, and more. Meanwhile working on one main project to develop a way to melt and mold plastic bags - prototype archway built from bricks manufactured using this technique.</p>
-                    #design-thinking #prototyping #iterative-design
+                  <li><a href="projects/melt/index.html">Melt Collective</a> - 2017-18<br/>
+                  	#design-thinking #prototyping #iterative-design
+                    <p style="margin-top: 3px">6 months of artist-in-residency at the <a href="http://www.meltcollective.com" target="blank">Melt Collective</a> lab. Helping to ideate and prototype creative uses for recycled plastic in various multi-discplinary teams including artists, scientists, engineers, and more. Meanwhile working on one main project to develop a way to melt and mold plastic bags - prototype archway built from bricks manufactured using this technique.</p>
                   </li>
-                  <li><a href="projects/artworks/index.html">Other art projects</a> - 2014-19
-                    <p style="margin-bottom: 3px">Various art projects from throughout my undergraduate fine art degree, and beyond: ranging from traditional painting, to experimental wearables, to robotic sculptures.</p>
-                    #visual-design #interaction-design #prototyping #iterative-design #illustration
+                  <li><a href="projects/artworks/index.html">Other art projects</a> - 2014-19<br/>
+                  	#visual-design #interaction-design #prototyping #iterative-design #illustration
+                    <p style="margin-top: 3px">Various art projects from throughout my undergraduate fine art degree, and beyond: ranging from traditional painting, to experimental wearables, to robotic sculptures.</p>
                   </li>
                 </ul>
                 <h2>Work Experience</h2>
                 <ul>
-                  <li><a href="projects/ahva/index.html">Visual Art Department - UBC</a>
-                    <p style="margin-bottom: 3px">Redesigned the website into a new digital information hub for safety, training and other information. Managed web content and designed posters for visiting artists and art exhibitions</p>
-                    #user-centered-design #design-thinking #visual-design #illustration
+                  <li><a href="projects/ahva/index.html">Visual Art Department - UBC</a><br/>
+                  	#user-centered-design #design-thinking #visual-design #illustration
+                    <p style="margin-top: 3px">Redesigned the website into a new digital information hub for safety, training and other information. Managed web content and designed posters for visiting artists and art exhibitions</p>
                   </li>
-                  <li><a href="projects/ck12/index.html">Ck-12 Foundation</a>
-                    <p style="margin-bottom: 3px">As an intern, then designer, then contractor, I mocked up website and app prototypes for the executive team. I helped develop the concept and design of a new “Study Guides” feature, and created hundreds of illustrations for science and math textbooks. I also helped to debug and refine beta content tools targeted at teachers.</p>
-                    #illustration #visual-design #interaction-design #prototyping
+                  <li><a href="projects/ck12/index.html">Ck-12 Foundation</a><br/>
+                  	#illustration #visual-design #interaction-design #prototyping
+                    <p style="margin-top: 3px">As an intern, then designer, then contractor, I mocked up website and app prototypes for the executive team. I helped develop the concept and design of a new “Study Guides” feature, and created hundreds of illustrations for science and math textbooks. I also helped to debug and refine beta content tools targeted at teachers.</p>
                     <p style="margin-bottom: 25px"></p>
                   </li>
                	</ul>
