--- a/resume.html
+++ b/resume.html
@@ -37,7 +37,7 @@
                                 </li>
                                 <li><a href="https://ahva.ubc.ca" target="blank">Visual Art Department (UBC)</a> | Vancouver, BC - 2016-18
                                     <p>Graphics/Media Production Assistant</p>
-                                    <p>Based on data I gathered from the varied labs of the art department, I reoprganized the website of the department into a new online training and information hub for students to access all relevant safety, training and other information. I also streamlined some backend processes for the administration by simplifing information input, and reorganized data to enable more automation. As the departments designer I also created promotional material for visiting artist events and exhibition openings, kept their website up to date. <a href="projects/ahva/index.html">more ></a></p>
+                                    <p>Based on data I gathered from the varied labs of the art department, I reorganized the website of the department into a new online training and information hub for students to access all relevant safety, training and other information. I also streamlined some backend processes for the administration by simplifing information input, and reorganized data to enable more automation. As the departments designer I also created promotional material for visiting artist events and exhibition openings, kept their website up to date. <a href="projects/ahva/index.html">more ></a></p>
                                 </li>
                                 <li><a href="https://www.ck12.org" target="blank">Ck-12</a> | Palo Alto, CA - 2011-16
                                     <p>Designer (Contract)</p>
