--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@
                             <ul>
                                 <li><a href="http://www.cs.ubc.ca/labs/imager/laboverview.php" target="blank">Samsung + eDAPT Lab (UBC)</a> | Vancouver, BC - 2017-18
                                     <p>Undergraduate Researcher</p>
-                                    <p>Working with one other undergraduate researcher, I built a prototype kiosk to help seniors learn to use smart phones, which expanded on a proptype developed by a reasearcher at the Samsung UX research lab in Vancouver, BC. We began with lightweight user testing to gather initial feedback while we iterated on the design of the kiosk, and finally we designed and ran a controlled experiment in collaboration with a post-doc in Japan which was presented as a poster at CSCW '18. <a href="projects/helpkiosk/index.html">more ></a></p>
+                                    <p>Working with one other undergraduate researcher, I built a prototype kiosk to help seniors learn to use smart phones, which expanded on a prototype developed by a reasearcher at the Samsung UX research lab in Vancouver, BC. We began with lightweight user testing to gather initial feedback while we iterated on the design of the kiosk, and finally we designed and ran a controlled experiment in collaboration with a post-doc in Japan which was presented as a poster at CSCW '18. <a href="projects/helpkiosk/index.html">more ></a></p>
                                 </li>
                                 <li><a href="http://www.meltcollective.com" target="blank">Melt Collective</a> | Vancouver, BC - 2017-18
                                     <p>Resident Artist</p>
