added links to ahva page

--- a/projects/ahva/index.html
+++ b/projects/ahva/index.html
@@ -15,8 +15,8 @@
 						<h1><strong>Graphics/Media Assistant<br/>Visual Art Department (UBC)</strong><br/>
 						Sept 2016 - Aug 2018</h1>
 						<p>Vancouver, BC</p>
-						<h4>I worked for the department for two years as a designer. At the beginning I created designs for visiting artists and exhibitions.<br/>Then I was given charge of the website, to update content and preserve the look-and-feel across their entire web presence.</h4>
-						<h4>In my last six months there I was given a brief to redesign their website to more directly address the needs of both the staff and the students.<br/>I interviewed the various lab technicians, students, and administrators in charge of trainings.<br/>Based on this information I restructured the website into an information hub targeted towards students, and restructured the inventory and classification systems to ease information input for technicians and administrators.<br/>I also implemented a new QR code system for the art facilities to ease access to sitauted information in various labs.</h4>
+						<h4>I worked for the department for two years as a designer. At the beginning I created designs for visiting artists and exhibitions.<br/>Then I was given charge of the website, to update content and preserve the look-and-feel across their entire web presence (<a href="https://ahva.ubc.ca" target="blank">link</a>).</h4>
+						<h4>In my last six months there I was given a brief to redesign their website to more directly address the needs of both the staff and the students.<br/>I interviewed the various lab technicians, students, and administrators in charge of trainings.<br/>Based on this information I restructured the website into an information hub targeted towards students, and restructured the inventory and classification systems to ease information input for technicians and administrators (<a href="https://ahva.ubc.ca/research-resources/" target="blank">link</a>).<br/>I also implemented a new QR code system for the art facilities to ease access to sitauted information in various labs.</h4>
 					</header>
 					<section id="main">
 							<section class="thumbnails">
