--- a/projects/design/index.html
+++ b/projects/design/index.html
@@ -24,7 +24,7 @@
 								<div>
 									<a href="images/fulls/01.jpg">
 										<img src="images/thumbs/01.jpg" alt="" />
-										<h3>Sketching user scenarios from interview notes for a grocery home-delivery application</h3>
+										<h3>Illustrations for the Dutch food delivery service <i>Picobelly</i></h3>
 									</a>
 									<a href="images/fulls/02.jpg">
 										<img src="images/thumbs/02.jpg" alt="" />
@@ -56,7 +56,11 @@
 									</a>
 									<a href="images/fulls/08.jpg">
 										<img src="images/thumbs/08.jpg" alt="" />
-										<h3>An experimental login screen design</h3>
+										<h3>Illustrations for a space video game</h3>
+									</a>
+									<a href="images/fulls/09.jpg">
+										<img src="images/thumbs/09.jpg" alt="" />
+										<h3>User centered deisgn using dilemnas</h3>
 									</a>
 								</div>
 							</section>
