--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
                 </div>
 			</div>
 			<div id="projects" class="contentlist">
-        <p style="margin-top: 30px">The following is a list of the projects I've worked on over the last several years. Select any project to see photos (and sometimes videos) and more information.</br></br>Here is a high quality PDF of a seldection of these projects: <a href="media/portfolio.pdf" download="ZackWilson_Portfolio">portfolio.pdf</a></p>
+        <p style="margin-top: 30px">The following is a list of the projects I've worked on over the last several years. Select any project to see photos (and sometimes videos) and more information.</br></br>Here is a high quality PDF version of my portfolio with a selection of these projects: <a href="media/portfolio.pdf" download="ZackWilson_Portfolio">portfolio.pdf</a></p>
                 <h2>UX and HCI Projects</h2>
                 <ul>
                   <li><a href="projects/helpkiosk/index.html">HelpKiosk</a> - 2017-18<br/>
