finished help kiosk page

--- a/projects/helpkiosk/index.html
+++ b/projects/helpkiosk/index.html
@@ -16,7 +16,7 @@
 						May 2017 - May 2018</h1>
 						<p>Vancouver, BC</p>
 						<h4>In collaboration with Samsung R&D Vancouver and the eDAPT Lab at the University of British Columbia, I developed an augmented display system to assist older adults to learn to use their smartphones. With one other research assistant, we updated an old version of the application to run on the latest hardware from Samsung, then conducted some initial user testing with older adults int he comunity (at libraries and community centers). We iterate on the design, then conducted a formal usability study, which was presented as a poster at the ASSETS '18 conference.<br/>The research was conducted with funding from the AgeWell Foundation and the Designing For People initiative at UBC.</h4>
-						<h4>A video showing the interface, from the submission to ASSETS '18: <a href="poster.pdf" target="blank">video</a>.</h4>
+						<h4>A video showing the interface, from the submission to ASSETS '18: <a href="https://youtu.be/Xiw-h4ytDWk" target="blank">video</a>.</h4>
 						<h4>The HelpKiosk project was also presented at the BC Tech Summit in 2018: <a href="poster.pdf" target="blank">poster</a>.</h4>
 					</header>
 					<section id="main">
@@ -28,6 +28,16 @@
 									</a>
 								</div>
 								<div>
+									<a href="images/fulls/04.jpg">
+										<img src="images/thumbs/04.jpg" alt="" />
+										<h3>Conducting a user test with an older adult recruited from Vancouver</h3>
+									</a>
+									<a href="images/fulls/05.jpg">
+										<img src="images/thumbs/05.jpg" alt="" />
+										<h3>The augmented display system in action</h3>
+									</a>
+								</div>
+								<div>
 									<a href="images/fulls/02.jpg">
 										<img src="images/thumbs/02.jpg" alt="" />
 										<h3>The simple homepage of the system</h3>
@@ -35,12 +45,6 @@
 									<a href="images/fulls/03.jpg">
 										<img src="images/thumbs/03.jpg" alt="" />
 										<h3>The system state during a guided tutorial</h3>
-									</a>
-								</div>
-								<div>
-									<a href="images/fulls/04.jpg">
-										<img src="images/thumbs/04.jpg" alt="" />
-										<h3>I conducted many user tests with older adults recruited from Vancouver</h3>
 									</a>
 								</div>
 							</section>
